Bug 153518 - B3's integer range analysis should know that Mul'ing two sufficiently small numbers will yield a number that still has a meaningful range
Summary: B3's integer range analysis should know that Mul'ing two sufficiently small n...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 150507
  Show dependency treegraph
 
Reported: 2016-01-26 15:25 PST by Filip Pizlo
Modified: 2016-01-26 16:49 PST (History)
11 users (show)

See Also:


Attachments
the patch (6.95 KB, patch)
2016-01-26 15:27 PST, Filip Pizlo
benjamin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2016-01-26 15:25:27 PST
I almost added these optimizations to the DFG integer range optimization phase.  That phase is very complicated.  B3's integer range analysis is trivial.  So I added it to B3.

Eventually we'll want this same machinery in DFG also.
Comment 1 Filip Pizlo 2016-01-26 15:27:47 PST
Created attachment 269936 [details]
the patch
Comment 2 WebKit Commit Bot 2016-01-26 15:30:42 PST
Attachment 269936 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/b3/B3ReduceStrength.cpp:1968:  Multi line control clauses should use braces.  [whitespace/braces] [4]
Total errors found: 1 in 3 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Filip Pizlo 2016-01-26 16:49:27 PST
Landed in http://trac.webkit.org/changeset/195637